# reem_tutorials

./: CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml  stack.xml
config/: reem.rviz  reem.vcg  reem_cameras.vcg  reem_fuerte.vcg  reem_full_fuerte.vcg  reem_minimal.vcg  reem_navigation.rviz  reem_no_cameras.rviz  reem_poses.yaml  reem_rgbd.rviz  reem_rgbd.vcg  reem_tutorial.rviz
launch/: autonomous_2dnav.launch  keyboard_teleop.launch  mapping.launch  reem_kinematic_sim.launch  reem_look_to_point_world.launch  rviz.launch  tutorial_rviz.launch
scripts/: reach_pose_moveit.py  sonar_base_1.sh  sonar_base_2.sh
src/: face_detection.cpp  face_enrollment.cpp  face_recognition.cpp  init_pose.cpp  look_to_point.cpp  move_left_arm_joint_goal.cpp  move_right_arm_torso_pose_goal.cpp  reach_pose.cpp  remote_monocular_image_visualization.cpp  remote_stereo_image_visualization.cpp
worlds/objects/: wallWithREEMphoto.urdf
