<?xml version="1.0"?>
<package>
  <name>reem_tutorials</name>
  <version>0.0.1</version>
  <description>A collection of ROS tutorials for the REEM robot.</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>
  <license>BSD</license>

  <author email="adolfo.rodrigez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pal_camera_client</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>pal_face_database</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pal_camera_client</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>pal_face_database</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- for launch files -->
  <run_depend>reem_2dnav_gazebo</run_depend>
  <run_depend>reem_description</run_depend>
  <run_depend>reem_gazebo</run_depend>
  <run_depend>rviz</run_depend>

</package>
